--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [21.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,3 +29,11 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.3.1
+      with:
+        name: build_files
+        path: ./build
+        compression-level: 0
+        overwrite: true
+          
