--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.5",
     "@react-google-maps/api": "^2.19.3",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +24,7 @@
     "react-native-svg": "^14.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "stripe": "^14.22.0",
     "usdl-regex": "^1.7.3",
     "use-places-autocomplete": "^4.0.1",
     "validator": "^13.11.0",
